# CrabyBase

./: .gitignore  Cargo.toml  README.md
crates/crabybase-cli/: Cargo.toml
crates/crabybase-cli/src/: main.rs
crates/crabybase-db/: Cargo.toml
crates/crabybase-db/migrations/sqlite/data/: 2023-04-08-create-tables-table.sql
crates/crabybase-db/migrations/sqlite/log/: 2023-04-08-create-logs-table.sql
crates/crabybase-db/src/: sqlite.rs
