[package]
name = "crabybase-db"
version = "0.0.0"
edition = "2021"

[dependencies]
crossbeam = "0"
anyhow = "1"
nanoid = "0"

log = "0"
env_logger = "0"

tokio = { version = "1", features = ["full"] }

axum = { version = "0", features = ["tokio"] }
hyper = "0"
tower = "0"
tower-http = { version = "0", features = ["full"] }
tower_governor = "0"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

rusqlite = { version = "0", features = ["bundled", "column_decltype", "serde_json"] }
rusqlite_migration = "1"
r2d2 = "0"
r2d2_sqlite = "0"